<resources>
    <string name="app_name">Moner</string>
    <string name="text_hint_amount">Rp0</string>
    <string name="text_hint_payment">Select Payment</string>
    <string name="text_hint_category">Select Category</string>
    <string name="text_hint_note">Note (Optional)</string>
    <string name="text_hint_date">Date</string>
    <string name="text_message_error_retrieving_data">There was a problem retrieving data, please try again.</string>
    <string name="text_message_error">Oops, there was a little problem, please try again.</string>
    <string name="text_message_delete_transaction">Do you want to delete this transaction?</string>
    <string name="text_message_placeholder">The transaction you added will be here.</string>
    <string name="text_placeholder_save">Save</string>
    <string name="text_placeholder_update">Update</string>
    <string name="text_placeholder_add_record">Add Record</string>
    <string name="text_placeholder_edit_record">Edit Record</string>
    <string name="text_placeholder_select_date">Select Date</string>
    <string name="text_placeholder_cancel">Cancel</string>
    <string name="text_placeholder_note_empty">-</string>
    <string name="text_placeholder_delete">Delete</string>
    <string name="text_placeholder_ok">OK</string>
    <string name="text_title_expense">Expense</string>
    <string name="text_title_income">Income</string>
    <string name="text_title_record">Record</string>
    <string name="text_title_transaction">Transaction</string>
    <string name="text_title_total">Total</string>
    <string name="text_title_financial_records">Financial Records</string>
    <string name="text_title_transaction_detail">Transaction Details</string>
    <string name="text_title_expanse_category">Expense Category</string>
    <string name="text_title_income_category">Income Category</string>
    <string name="text_title_payment_category">Payment Category</string>
    <string name="text_title_date">Date</string>
    <string name="text_title_payment">Payment</string>
    <string name="text_title_type">Type</string>
    <string name="text_title_delete">Delete</string>
    <string name="text_title_edit">Edit</string>

    <string-array name="expense_category">
        <item>Food &amp; Drink</item>
        <item>Online Transportation</item>
        <item>Transportation</item>
        <item>Digital Wallet</item>
        <item>Monthly needs</item>
        <item>Shopping</item>
        <item>Rent/Contract</item>
        <item>Instalment</item>
        <item>Entertainment</item>
        <item>Hobby</item>
        <item>Sport</item>
        <item>Health</item>
        <item>Education</item>
        <item>Insurance</item>
        <item>Investment</item>
        <item>Charity/Donation</item>
        <item>Money Out</item>
    </string-array>

    <string-array name="income_category">
        <item>Salary</item>
        <item>Business</item>
        <item>Bonus</item>
        <item>Deposit</item>
        <item>Gift</item>
        <item>Admission Fee</item>
    </string-array>

    <string-array name="payment_category">
        <item>Cash</item>
        <item>Debit</item>
        <item>Digital Wallet</item>
        <item>Credit card</item>
    </string-array>
</resources>