<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.record.RecordFragment">

    <include
        android:id="@+id/layout_title"
        layout="@layout/layout_title_fragment" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_title"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_8sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_14sdp">

            <TableRow
                android:id="@+id/tr_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/iv_money_out"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/text_title_expense"
                        android:src="@drawable/ic_money_out_24"
                        android:theme="@style/ImageViewIcon" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_title_expense"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_amount_expense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/text_hint_amount"
                            android:textColor="@color/red"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/iv_money_in"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/text_title_income"
                        android:src="@drawable/ic_money_in_24"
                        android:theme="@style/ImageViewIcon" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_title_income"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_amount_income"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/text_hint_amount"
                            android:textColor="@color/green"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </TableRow>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tr_money"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_title_total"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_amount_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_hint_amount"
                    android:textColor="@color/color_secondary_variant"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_records"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cardView"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_record" />

    <include
        android:id="@+id/layout_placeholder"
        layout="@layout/layout_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView"
        android:visibility="gone" />
</RelativeLayout>